--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES2017",
+    "declaration": true,
     "module": "CommonJS",
     "moduleResolution": "node",
     "esModuleInterop": true,
