--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "dependencies": {
     "p-queue": "^6.3.0"
   },
+  "repository": {
+    "url": "https://github.com/kenotron/p-queue"
+  },
   "devDependencies": {
     "@types/jest": "^25.2.1",
     "beachball": "^1.31.0",
