--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc",
     "start": "tsc -w --preserveWatchOutput",
     "test": "jest",
-    "release": "yarn build && beachball publish",
+    "release": "yarn build && yarn test && beachball publish",
     "check": "beachball check",
     "change": "beachball change"
   },
